--- a/core-web/libs/block-editor/src/lib/extensions/ai-image-prompt/components/ai-image-prompt-form/ai-image-prompt-form.component.html
+++ b/core-web/libs/block-editor/src/lib/extensions/ai-image-prompt/components/ai-image-prompt-form/ai-image-prompt-form.component.html
@@ -81,6 +81,7 @@
                         rows="11"
                         cols="30"
                         pInputTextarea
+                        dotClipboard
                         readonly>
                     </textarea>
                 </div>
