fix(edit-contentlet): Implement new design in the edit content screen sidebar #27908 (#28346)
* fix(edit-contentlet): redirect to edit contentType in sidebar

* feat: update template for semantic HTML and a11y compliance

* fix tests

* chore: code cleanup

--- a/core-web/libs/dotcms-scss/angular/styles.scss
+++ b/core-web/libs/dotcms-scss/angular/styles.scss
@@ -87,6 +87,10 @@ a {
     }
 }
 
+button {
+    font-family: $font-default;
+}
+
 /*
 
 Dragula clone and append dragged element to the body we need to have their styles globally.
