--- a/core-web/libs/edit-content/src/lib/components/dot-edit-content-aside/components/dot-content-aside-information/dot-content-aside-information.component.html
+++ b/core-web/libs/edit-content/src/lib/components/dot-edit-content-aside/components/dot-content-aside-information/dot-content-aside-information.component.html
@@ -13,66 +13,67 @@
             aria-label="Copy ID" />
     </div>
     <div class="content-aside__metadata">
-        <div
+        <a
             class="sidebar-card"
-            [routerLink]="'/content-types-angular/edit/' + contentTypeName"
-            data-testId="content-type-link">
-            <div class="sidebar-card__header">
-                <span>{{ 'Content-Type' | dm }}</span>
-            </div>
-            <label class="sidebar-card__label">{{ contentTypeName }}</label>
-        </div>
-        <div class="sidebar-card" data-testId="references-button">
-            <div class="sidebar-card__header">
-                <span>{{ 'References' | dm }}</span>
-                <i class="pi pi-eye"></i>
-            </div>
-        </div>
+            [routerLink]="'/content-types-angular/edit/' + contentType.variable"
+            data-testId="content-type-link"
+            aria-label="Edit Content Type">
+            <span class="sidebar-card__header">{{ 'Content-Type' | dm }}</span>
+            <span class="sidebar-card__label">{{ contentType.name }}</span>
+        </a>
+        <button class="sidebar-card" data-testId="references-button" aria-label="References">
+            <span class="sidebar-card__header"
+                >{{ 'References' | dm }} <i class="pi pi-eye" aria-hidden="true"></i
+            ></span>
+        </button>
         <div class="content-history__container" data-testId="history-container">
             @if(loading) { @for(title of ['Published','Modified','Created'] ; track $index) {
             <div class="content-history">
-                <label class="content-history__title">{{ title | dm }}</label>
+                <span class="content-history__title">{{ title | dm }}</span>
                 <p-skeleton class="content-history__author" width="89.33px" height="14px" />
                 <p-skeleton class="content-history__date" width="89.33px" height="14px" />
             </div>
             } } @else { @if(contentlet?.publishDate) {
-            <div
+            <button
                 class="content-history"
                 [pTooltip]="contentlet?.publishDate | date : 'MMM dd, yyyy'"
                 tooltipPosition="bottom"
-                data-testId="publish-history">
-                <label class="content-history__title">{{ 'Published' | dm }}</label>
-                <label class="content-history__author" *ngIf="contentlet?.publishUserName">{{
+                data-testId="publish-history"
+                aria-label="Publish History">
+                <span class="content-history__title">{{ 'Published' | dm }}</span>
+                <span class="content-history__author" *ngIf="contentlet?.publishUserName">{{
                     contentlet?.publishUserName
-                }}</label>
-                <label class="content-history__date">{{
+                }}</span>
+                <span class="content-history__date">{{
                     contentlet?.publishDate | dotRelativeDate : 'MM/dd/yyyy' : null
-                }}</label>
-            </div>
+                }}</span>
+            </button>
             } @if(contentlet?.modDate) {
-            <div
+            <button
                 class="content-history"
                 [pTooltip]="contentlet?.modDate | date : 'MMM dd, yyyy'"
                 tooltipPosition="bottom"
-                data-testId="mod-history">
-                <label class="content-history__title">{{ 'Modified' | dm }}</label>
-                <label class="content-history__author">{{ contentlet?.modUserName }}</label>
-                <label class="content-history__date">{{
+                data-testId="mod-history"
+                aria-label="Modification History">
+                <span class="content-history__title">{{ 'Modified' | dm }}</span>
+                <span class="content-history__author">{{ contentlet?.modUserName }}</span>
+                <span class="content-history__date">{{
                     contentlet?.modDate | dotRelativeDate : 'MM/dd/yyyy' : null
-                }}</label>
-            </div>
+                }}</span>
+            </button>
             }
-            <div
+            <button
                 class="content-history"
-                [pTooltip]="contentlet?.createDate | date : 'MMM dd, yyyy'"
+                [pTooltip]="contentlet?.createDate || currentDate | date : 'MMM dd, yyyy'"
                 tooltipPosition="bottom"
-                data-testId="create-history">
-                <label class="content-history__title">{{ 'Created' | dm }}</label>
-                <label class="content-history__author">{{ contentlet?.ownerName || 'You' }}</label>
-                <label class="content-history__date">{{
+                data-testId="create-history"
+                aria-label="Creation History">
+                <span class="content-history__title">{{ 'Created' | dm }}</span>
+                <span class="content-history__author">{{ contentlet?.ownerName || 'You' }}</span>
+                <span class="content-history__date">{{
                     contentlet?.createDate | dotRelativeDate : 'MM/dd/yyyy' : null
-                }}</label>
-            </div>
+                }}</span>
+            </button>
             }
         </div>
     </div>
