--- a/core-web/libs/edit-content/src/lib/components/dot-edit-content-aside/components/dot-content-aside-information/dot-content-aside-information.component.scss
+++ b/core-web/libs/edit-content/src/lib/components/dot-edit-content-aside/components/dot-content-aside-information/dot-content-aside-information.component.scss
@@ -31,6 +31,8 @@
         padding: $spacing-1;
         border-radius: $border-radius-lg;
         gap: $spacing-0;
+        text-decoration: none;
+        border: none;
 
         &,
         label {
@@ -50,6 +52,7 @@
         font-size: $font-size-smd;
         font-weight: $font-weight-medium-bold;
         line-height: $line-height-relative;
+        width: 100%;
 
         i {
             color: $color-palette-primary-500;
@@ -83,6 +86,8 @@
         position: relative;
         user-select: none;
         min-height: 5rem;
+        border: none;
+        background-color: $white;
         @include truncate-text;
 
         &,
