implemenetation(Table): feedback, could not find class reference in the primeng code, leave it as is for now

--- a/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_table.scss
+++ b/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_table.scss
@@ -121,8 +121,8 @@
                 .p-row-editor-init,
                 .p-row-editor-save,
                 .p-row-editor-cancel {
-                    width: $spacing-5;
-                    height: $spacing-5;
+                    width: 2rem;
+                    height: 2rem;
                     color: $black;
                     border: 0 none;
                     background: transparent;
