feat(edit-page-2): Allow drag and drop functionality for images in dotcms (#28249)
* wip

* move drag item to the store

* Update edit-ema-editor.component.ts

* unify drag and drop

* now we can drop images

* code cleaning

* merge conflicts

* handle drop on the editor and handle file dropping

* fix dropzone bug

* partial fix of a bug

* potential fix for the out of bounds bug

* clean state on mouse over and no dragItem

* was not the fix

* error handling

* fix dropzone tests

* fix palette and tools tests

* add test cases first part

* fix broken test

* add test cases part 2

* add rest of test cases

* small refactor to avoid double calculations

* optimize ngFor

* feedback

* feedback

* fix sonarqube

* feedback

* fix after merge

--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/edit-ema-palette/edit-ema-palette.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/edit-ema-palette/edit-ema-palette.component.html
@@ -5,9 +5,7 @@
         [filter]="vm.contenttypes.filter"
         [paletteStatus]="vm.status"
         (search)="loadContentTypes($event, vm.allowedTypes)"
-        (showContentlets)="showContentletsFromContentType($event)"
-        (dragStart)="onDragStart($event)"
-        (dragEnd)="onDragEnd($event)" />
+        (showContentlets)="showContentletsFromContentType($event)" />
 
     <dot-edit-ema-palette-contentlets
         *ngIf="vm.currentPaletteType === PALETTE_TYPES_ENUM.CONTENTLET"
@@ -15,7 +13,5 @@
         [paletteStatus]="vm.status"
         (paginate)="onPaginate($event)"
         (search)="loadContentlets($event, vm.currentContentType)"
-        (showContentTypes)="showContentTypes()"
-        (dragStart)="onDragStart($event)"
-        (dragEnd)="onDragEnd($event)" />
+        (showContentTypes)="showContentTypes()" />
 </ng-container>
