--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/edit-ema-palette/components/edit-ema-palette-content-type/edit-ema-palette-content-type.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/edit-ema-palette/components/edit-ema-palette-content-type/edit-ema-palette-content-type.component.html
@@ -19,34 +19,35 @@
         [borderSize]="'8px'"></dot-spinner>
 
     <ng-template #content>
+        @for (contentType of contentTypes; track contentType.id; let i = $index) {
         <div
             class="content-type-card"
-            *ngFor="let contenttype of contentTypes; let i = index"
             [attr.data-item]="
                 {
-                    variable: contenttype.variable,
-                    name: contenttype.name,
-                    contentType: contenttype.variable,
-                    baseType: contenttype.baseType
+                    contentType: {
+                        variable: contentType.variable,
+                        name: contentType.name,
+                        baseType: contentType.baseType,
+                    },
+                    move: false
                 } | json
-            "
+                "
             [attr.data-testId]="'content-type-' + i"
-            (dragstart)="dragStart.emit($event)"
-            (dragend)="dragEnd.emit($event)"
             data-type="content-type"
             draggable="true">
             <button
                 class="button-go-content"
                 [attr.data-testId]="'content-type-' + i + '-button-go-content'"
-                (click)="showContentletsFromContentType(contenttype.variable)">
+                (click)="showContentletsFromContentType(contentType.variable)">
                 <i class="pi pi-angle-right"></i>
             </button>
 
             <div class="content-type-card__content">
-                <dot-icon [name]="contenttype.icon" [size]="24"></dot-icon>
-                <span>{{ contenttype.name }}</span>
+                <dot-icon [name]="contentType.icon" [size]="24"></dot-icon>
+                <span>{{ contentType.name }}</span>
             </div>
             <dot-icon class="drag-icon" [size]="20" name="drag_indicator"></dot-icon>
         </div>
+        }
     </ng-template>
 </div>
