--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/edit-ema-palette/components/edit-ema-palette-contentlets/edit-ema-palette-contentlets.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/edit-ema-palette/components/edit-ema-palette-contentlets/edit-ema-palette-contentlets.component.html
@@ -27,19 +27,22 @@
     <ng-template #content>
         <ng-container *ngIf="contentlets.items.length > 0; else noContent">
             <div class="contentlets-cards">
+                @for(contentlet of contentlets.items; track contentlet.identifier; let i = $index) {
                 <div
                     class="contentlet-card"
-                    *ngFor="let contentlet of contentlets.items; let i = index"
                     [attr.data-item]="
                         {
-                            contentlet: { identifier: contentlet.identifier },
-                            contentType: contentlet?.contentType,
-                            baseType: contentlet.baseType
+                            contentlet: {
+                                identifier: contentlet.identifier,
+                                contentType: contentlet.contentType,
+                                baseType: contentlet.baseType,
+                                inode: contentlet.inode,
+                                title: contentlet.title
+                            },
+                            move: false
                         } | json
                     "
                     [attr.data-testId]="'contentlet-' + i"
-                    (dragstart)="dragStart.emit($event)"
-                    (dragend)="dragEnd.emit($event)"
                     data-type="contentlet"
                     draggable="true">
                     <dot-icon [size]="20" name="drag_indicator"></dot-icon>
@@ -49,6 +52,7 @@
 
                     <span>{{ contentlet.title }}</span>
                 </div>
+                }
             </div>
         </ng-container>
         <ng-template #noContent>No content to show</ng-template>
