--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/ema-contentlet-tools/ema-contentlet-tools.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/ema-contentlet-tools/ema-contentlet-tools.component.html
@@ -16,7 +16,7 @@
     *ngIf="!isContainerEmpty"
     [ngStyle]="getActionPosition()"
     data-testId="actions">
-    @if (contentlet.payload.vtlFiles?.length) {
+    @if (contentletArea.payload.vtlFiles?.length) {
     <p-menu #menuVTL [model]="vtlFiles" [popup]="true" appendTo="body" />
     <p-button
         (click)="menuVTL.toggle($event)"
@@ -26,25 +26,32 @@
     }
 
     <p-button
-        (dragstart)="dragStart($event, contentlet.payload)"
-        (dragend)="dragEnd($event)"
+        [attr.data-item]="
+            {
+                container: contentletArea.payload.container,
+                contentlet: contentletArea.payload.contentlet,
+                move: true
+            } | json
+        "
+        (dragstart)="dragStart($event)"
+        data-type="contentlet"
         draggable="true"
         data-testId="drag-button"
         styleClass="p-button-rounded p-button-raised"
         icon="pi pi-arrows-alt" />
     <p-button
-        (click)="delete.emit(contentlet.payload)"
+        (click)="delete.emit(contentletArea.payload)"
         data-testId="delete-button"
         styleClass="p-button-rounded p-button-raised delete"
         icon="pi pi-times" />
     <p-button
-        (click)="edit.emit(contentlet.payload)"
+        (click)="edit.emit(contentletArea.payload)"
         data-testId="edit-button"
         styleClass="p-button-rounded p-button-raised"
         icon="pi pi-pencil" />
 </div>
 
 <div class="bounds" [ngStyle]="getPosition()" data-testId="bounds"></div>
-<div class="drag-image" #dragImage *ngIf="contentlet" data-testId="drag-image">
-    {{ contentlet.payload.contentlet.contentType }}
+<div class="drag-image" #dragImage *ngIf="contentletArea" data-testId="drag-image">
+    {{ contentletArea.payload.contentlet.contentType }}
 </div>
