implemenetation(Table): feedback to match storybook

--- a/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_table.scss
+++ b/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_table.scss
@@ -31,7 +31,7 @@
             border-width: 0 0 1px 0;
             color: $black;
             font-size: $font-size-xsm;
-            font-weight: $font-weight-semi-bold;
+            font-weight: $font-weight-bold;
             padding: $spacing-1;
             text-align: left;
             transition: none;
