implemenetation(Table): limit width of column if has p-tableHeaderCheckbox

--- a/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_table.scss
+++ b/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_table.scss
@@ -37,6 +37,10 @@
             transition: none;
             text-wrap: nowrap;
 
+            &:has(p-tableHeaderCheckbox) {
+                width: 40px;
+            }
+
             &:first-child {
                 padding-left: $spacing-3;
             }
